Fix sidebar z-index issue.

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,6 +1,8 @@
-#sidebar-wrapper {
-  position: relative;
-  z-index: 999;
+.sidebar {
+  > div {
+    position: relative;
+    z-index: 999;
+  }
 }
 @media (min-width: 1024px) {
   .sidebar {
